--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ main {
     background-color: white; 
     border-radius: 1.5rem; 
     overflow: hidden; 
+    max-width: 40rem; 
 }
 
 .text {
@@ -139,7 +140,7 @@ h1 {
 @media screen and (min-width: 900px) {
     main {
         display: flex; 
-        width: 73rem; 
+        max-width: 73rem; 
         padding-bottom: 0;
         overflow: unset;  
     }
